# solar-system-orbits

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.mmd
notebooks/: casos_graficadores.ipynb
scripts/: install.sh
src/solar_orbits/: __init__.py  notebook_utils.py
src/solar_orbits/config/: factories.py
src/solar_orbits/domain/: __init__.py  orbit_animation_2d_service.py  orbit_animation_3d_service.py  orbit_data_service.py  orbit_plot_service.py
src/solar_orbits/model/: __init__.py  bodies.py  models.py  orbital_periods.py
src/solar_orbits/ports/: __init__.py
src/solar_orbits/ports/animation/: __init__.py
src/solar_orbits/ports/animation/adapters/: matplotlib_3d_animator.py  pillow_3d_animator.py  pyvista_3d_animator.py  vedo_3d_animator.py
src/solar_orbits/ports/animation_2d/: __init__.py  orbit_animation_2d.py
src/solar_orbits/ports/animation_2d/adapters/: matplotlib_2d_animator.py  pillow_2d_animator.py  pyvista_2d_animator.py  vedo_2d_animator.py
src/solar_orbits/ports/animation_3d/: orbit_animation_3d.py
src/solar_orbits/ports/animation_3d/adapters/: matplotlib_3d_animator.py  pillow_3d_animator.py  pyvista_3d_animator.py  vedo_3d_animator.py
src/solar_orbits/ports/ephemeris/: __init__.py  ephemeris_provider.py
src/solar_orbits/ports/plotting/: __init__.py  orbit_plotter.py
tests/: conftest.py  test_factories.py  test_orbit_animation_2d_service.py  test_orbit_animation_3d_service.py  test_orbit_data_service.py  test_orbit_plot_service.py  test_orbit_services.py
(+7 files in other folders)
