[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar-orbit"
version = "0.1.0"
description = "Visualizacion de orbitas planetarias con arquitectura hexagonal e intercambio de motores graficos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pillow>=10.0",
]

[project.optional-dependencies]
jpl = ["astroquery>=0.4.7"]
pyvista = ["pyvista>=0.43", "imageio>=2.34"]
vedo = ["vedo>=2024.5", "imageio>=2.34"]
visual = ["pyvista>=0.43", "vedo>=2024.5", "imageio>=2.34"]
dev = ["pytest>=7.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/solar_orbits"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
