[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar-system-orbits"
version = "0.1.0"
description = "Visualizacion de orbitas planetarias con arquitectura hexagonal e intercambio de motores graficos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "astroquery>=0.4.7",
  "imageio>=2.34",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/solar_orbits"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
